--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "handlebars": "^4.0.14",
+    "lodash.template": "^4.5.0",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
