--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ script:
 install:
   - npm install -g firebase-tools
 after_success:
-  - firebase deploy --token "$FIREBASE_TOKEN" --only hosting
+  - firebase deploy --only hosting --token "$FIREBASE_TOKEN"
